# IEEE745_16

./: pyproject.toml  pyserial.py  serial_test.py  test.py
Py_Window/: Pyqt5_Serial.py
